Update to battdat v0.4

--- a/0_creating-archive-formats.ipynb
+++ b/0_creating-archive-formats.ipynb
@@ -19,21 +19,12 @@
    "execution_count": 1,
    "id": "771937d3-8e99-453c-a0b9-36fede9eb29f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lward\\AppData\\Local\\miniconda3\\envs\\camp\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from batdata.extractors.maccor import MACCORExtractor\n",
-    "from batdata.schemas.battery import ElectrodeDescription, ElectrolyteDescription, BatteryDescription\n",
-    "from batdata.schemas import BatteryMetadata\n",
-    "from batdata.data import BatteryDataset\n",
+    "from battdat.io.maccor import MACCORReader\n",
+    "from battdat.schemas.battery import ElectrodeDescription, ElectrolyteDescription, BatteryDescription\n",
+    "from battdat.schemas import BatteryMetadata\n",
+    "from battdat.data import BatteryDataset\n",
     "from concurrent.futures import ProcessPoolExecutor, as_completed\n",
     "from shutil import rmtree\n",
     "from tqdm.auto import tqdm\n",
@@ -642,7 +633,7 @@
    "id": "b675e4a7-f964-4f97-abdc-1f03bbeea718",
    "metadata": {},
    "source": [
-    "We just need to rearrange this data into the structure provided by `batdata`."
+    "We just need to rearrange this data into the structure provided by `battdat`."
    ]
   },
   {
@@ -798,7 +789,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "extractor = MACCORExtractor()"
+    "reader = MACCORReader()"
    ]
   },
   {
@@ -846,7 +837,7 @@
        "      <td>0</td>\n",
        "      <td>0.000</td>\n",
        "      <td>ChargingState.hold</td>\n",
-       "      <td>-0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.073548</td>\n",
        "      <td>0</td>\n",
        "      <td>ControlMethod.rest</td>\n",
@@ -858,7 +849,7 @@
        "      <td>0</td>\n",
        "      <td>0.162</td>\n",
        "      <td>ChargingState.hold</td>\n",
-       "      <td>-0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
        "      <td>ControlMethod.rest</td>\n",
@@ -870,8 +861,8 @@
       ],
       "text/plain": [
        "   cycle_number  file_number  test_time               state  current  \\\n",
-       "0             0            0      0.000  ChargingState.hold     -0.0   \n",
-       "1             0            0      0.162  ChargingState.hold     -0.0   \n",
+       "0             0            0      0.000  ChargingState.hold      0.0   \n",
+       "1             0            0      0.162  ChargingState.hold      0.0   \n",
        "\n",
        "    voltage  step_index              method  substep_index  \n",
        "0  0.073548           0  ControlMethod.rest              0  \n",
@@ -884,7 +875,7 @@
     }
    ],
    "source": [
-    "data = extractor.generate_dataframe(data_path / record['File Name'])\n",
+    "data = reader.read_file(data_path / record['File Name'])\n",
     "data.head(2)"
    ]
   },
@@ -924,11 +915,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_cell(extractor: MACCORExtractor, files: list[str], metadata: BatteryMetadata, path: str):\n",
+    "def process_cell(extractor: MACCORReader, files: list[str], metadata: BatteryMetadata, path: str):\n",
     "    \"\"\"Convert then save to HDF5 format\"\"\"\n",
     "    \n",
-    "    data = extractor.parse_to_dataframe(files, metadata=metadata)\n",
-    "    data.to_batdata_hdf(path, complevel=9)"
+    "    data = extractor.read_dataset(files, metadata=metadata)\n",
+    "    data.to_hdf(path, complevel=9)"
    ]
   },
   {
@@ -938,52 +929,26 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 67%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▍                                                                              | 405/602 [29:27<21:34,  6.57s/it]"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4cdbb1c0c7ee4052accfe3366ac5f66b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/602 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING: Found 3 descriptions for build=\"B35G\". Picking the first\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 67%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▊                                                                              | 406/602 [29:34<21:54,  6.71s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Found 3 descriptions for build=\"B35G\". Picking the first\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 602/602 [41:58<00:00,  4.18s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "WARNING: Found 3 descriptions for build=\"B35G\". Picking the first\n",
+      "WARNING: Found 3 descriptions for build=\"B35G\". Picking the first\n",
       "Succeeded in parsing 602 cells\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -1034,7 +999,7 @@
     "\n",
     "    # Submit to be processed: \n",
     "    try:\n",
-    "        process_cell(extractor, files, metadata, save_path)\n",
+    "        process_cell(reader, files, metadata, save_path)\n",
     "    except:\n",
     "        raise\n",
     "        record = group.iloc[0].to_dict()\n",
@@ -1111,17 +1076,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "db14e3fc-a649-45f2-8f33-d6954cbb0e09",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = BatteryDataset.from_batdata_hdf(str(example_cell))"
+    "data = BatteryDataset.from_hdf(str(example_cell))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "42cc8330-bd3e-47ea-91d3-ebcdf371c02d",
    "metadata": {},
    "outputs": [
@@ -1223,7 +1188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
