--- a/3_publish-to-mdf.ipynb
+++ b/3_publish-to-mdf.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "from mdf_connect_client import MDFConnectClient\n",
     "from globus_sdk import LocalGlobusConnectPersonal\n",
-    "from batdata import __version__ as bd_version\n",
+    "from battdat import __version__ as bd_version\n",
     "from zipfile import ZipFile, ZIP_DEFLATED\n",
     "from pathlib import Path, PurePosixPath\n",
     "from shutil import rmtree\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "597c39f0-08c1-4efc-a421-924a9c4cc119",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "46d25494-bf3f-4e56-9cc1-40974c54eac9",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f134aa7b-f6db-4732-8468-4bea0519ee80",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "80d32c82-9f40-4837-aa62-7533146488d2",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "547277e2-64cd-4b92-a9cf-d7d51582acb6",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 300 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used low charging rates, and were tested for at least 100 cycles. We also include 302 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.3.2, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\n"
+      "Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 300 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used low charging rates, and were tested for at least 100 cycles. We also include 302 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.4.0, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\n"
      ]
     }
    ],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a3c27fde-2cb0-4d3f-b54b-57107c072c53",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "89f7d688-0bb3-4720-affe-6bb10b2c3b14",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "9ad917ee-8e4a-41bc-9fac-25c9394ecb7e",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "03a7dfd8-9c2f-43be-94a7-6697da60910c",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
        "  'publicationYear': '2024',\n",
        "  'resourceType': {'resourceTypeGeneral': 'Dataset',\n",
        "   'resourceType': 'Dataset'},\n",
-       "  'descriptions': [{'description': \"Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 300 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used low charging rates, and were tested for at least 100 cycles. We also include 302 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.3.2, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\",\n",
+       "  'descriptions': [{'description': \"Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 300 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used low charging rates, and were tested for at least 100 cycles. We also include 302 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.4.0, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\",\n",
        "    'descriptionType': 'Other'}],\n",
        "  'relatedIdentifiers': [{'relatedIdentifier': '10.1016/j.jpowsour.2022.231127',\n",
        "    'relatedIdentifierType': 'DOI',\n",
@@ -330,7 +330,7 @@
        " 'update_metadata_only': False}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "0df24fc9-4cc4-4d5b-a137-afbb761e23e5",
    "metadata": {},
    "outputs": [
@@ -351,37 +351,14 @@
        "{'source_id': 'camp_2023', 'success': True, 'error': None, 'status_code': 202}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = client.submit_dataset(update=False)\n",
+    "result = client.submit_dataset(update=True)\n",
     "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "18bf01e3-5a52-4aa8-be55-17d0521f3b7e",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'display_status'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mclient\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msource_id\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\AppData\\Local\\miniconda3\\envs\\camp\\Lib\\site-packages\\mdf_connect_client\\mdfcc.py:987\u001b[0m, in \u001b[0;36mMDFConnectClient.check_status\u001b[1;34m(self, source_id, short, raw)\u001b[0m\n\u001b[0;32m    985\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat((source_id \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msource_id), active_msg))\n\u001b[0;32m    986\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 987\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[43mjson_res\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdisplay_status\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m, active_msg))\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'display_status'"
-     ]
-    }
-   ],
-   "source": [
-    "client.check_status(result['source_id'])"
    ]
   },
   {
@@ -409,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
