Ensure ZIP file is correct
Delete the file to ensure that its content get overwritten

Also reduce the precision of the data from float64 (absurd)
to float32 (more reasonable)

--- a/0_creating-archive-formats.ipynb
+++ b/0_creating-archive-formats.ipynb
@@ -19,7 +19,16 @@
    "execution_count": 1,
    "id": "771937d3-8e99-453c-a0b9-36fede9eb29f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lward/miniconda3/envs/camp/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from battdat.io.maccor import MACCORReader\n",
     "from battdat.schemas.battery import ElectrodeDescription, ElectrolyteDescription, BatteryDescription\n",
@@ -685,6 +694,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_15700/3671467591.py:61: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/\n",
+      "  describe_cell(record).dict(exclude_unset=True)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "{'layer_count': 13,\n",
@@ -919,6 +936,9 @@
     "    \"\"\"Convert then save to HDF5 format\"\"\"\n",
     "    \n",
     "    data = extractor.read_dataset(files, metadata=metadata)\n",
+    "    for col in data.raw_data.columns:\n",
+    "        if data.raw_data[col].dtype == np.float64:\n",
+    "            data.raw_data[col] = data.raw_data[col].astype(np.float32)\n",
     "    data.to_hdf(path, complevel=9)"
    ]
   },
@@ -929,26 +949,52 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4cdbb1c0c7ee4052accfe3366ac5f66b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/602 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▋                                                                      | 405/602 [47:09<31:14,  9.51s/it]"
+     ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING: Found 3 descriptions for build=\"B35G\". Picking the first\n",
-      "WARNING: Found 3 descriptions for build=\"B35G\". Picking the first\n",
+      "WARNING: Found 3 descriptions for build=\"B35G\". Picking the first\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████                                                                      | 406/602 [47:18<30:59,  9.49s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Found 3 descriptions for build=\"B35G\". Picking the first\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 602/602 [1:11:15<00:00,  7.10s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Succeeded in parsing 602 cells\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -1076,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "db14e3fc-a649-45f2-8f33-d6954cbb0e09",
    "metadata": {},
    "outputs": [],
@@ -1086,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "42cc8330-bd3e-47ea-91d3-ebcdf371c02d",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
