--- a/3_publish-to-mdf.ipynb
+++ b/3_publish-to-mdf.ipynb
@@ -87,6 +87,17 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "2fb4ecbc-3f42-4223-9638-c8a0e1348d9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_path = data_path / 'all_hdf5s.zip'\n",
+    "zip_path.unlink(missing_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "a870973b-fc53-4adc-8d59-16ac514048ee",
    "metadata": {},
    "outputs": [],
@@ -107,10 +118,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "597c39f0-08c1-4efc-a421-924a9c4cc119",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting login with Globus Auth, press ^C to cancel.\n"
+     ]
+    }
+   ],
    "source": [
     "client = MDFConnectClient()"
    ]
@@ -126,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "46d25494-bf3f-4e56-9cc1-40974c54eac9",
    "metadata": {},
    "outputs": [],
@@ -139,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "f134aa7b-f6db-4732-8468-4bea0519ee80",
    "metadata": {},
    "outputs": [],
@@ -174,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "80d32c82-9f40-4837-aa62-7533146488d2",
    "metadata": {},
    "outputs": [],
@@ -184,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "547277e2-64cd-4b92-a9cf-d7d51582acb6",
    "metadata": {},
    "outputs": [
@@ -192,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 300 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used low charging rates, and were tested for at least 100 cycles. We also include 302 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.4.0, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\n"
+      "Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 300 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used low charging rates, and were tested for at least 100 cycles. We also include 302 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.4.3, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\n"
      ]
     }
    ],
@@ -219,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "a3c27fde-2cb0-4d3f-b54b-57107c072c53",
    "metadata": {},
    "outputs": [],
@@ -233,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "89f7d688-0bb3-4720-affe-6bb10b2c3b14",
    "metadata": {},
    "outputs": [],
@@ -252,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "9ad917ee-8e4a-41bc-9fac-25c9394ecb7e",
    "metadata": {},
    "outputs": [],
@@ -270,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "03a7dfd8-9c2f-43be-94a7-6697da60910c",
    "metadata": {},
    "outputs": [
@@ -315,22 +334,22 @@
        "    'givenName': 'Noah H.',\n",
        "    'affiliations': ['Argonne National Laboratory']}],\n",
        "  'publisher': 'Materials Data Facility',\n",
-       "  'publicationYear': '2024',\n",
+       "  'publicationYear': '2025',\n",
        "  'resourceType': {'resourceTypeGeneral': 'Dataset',\n",
        "   'resourceType': 'Dataset'},\n",
-       "  'descriptions': [{'description': \"Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 300 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used low charging rates, and were tested for at least 100 cycles. We also include 302 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.4.0, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\",\n",
+       "  'descriptions': [{'description': \"Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 300 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used low charging rates, and were tested for at least 100 cycles. We also include 302 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.4.3, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\",\n",
        "    'descriptionType': 'Other'}],\n",
        "  'relatedIdentifiers': [{'relatedIdentifier': '10.1016/j.jpowsour.2022.231127',\n",
        "    'relatedIdentifierType': 'DOI',\n",
        "    'relationType': 'IsPartOf'}]},\n",
-       " 'data_sources': ['https://app.globus.org/file-manager?origin_id=52ec65a8-323a-11ef-b82a-1dd816fe311b&origin_path=/C/Users/lward/Work/ROVI/publishing-camp-data/data'],\n",
+       " 'data_sources': ['https://app.globus.org/file-manager?origin_id=0c3771de-f236-11ec-b3c1-15403b7b75ed&origin_path=/home/lward/Work/ROVI/publishing-camp-data/data'],\n",
        " 'test': False,\n",
        " 'update': False,\n",
        " 'mdf': {'source_name': 'camp_2023', 'organization': 'MDF Open'},\n",
        " 'update_metadata_only': False}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "0df24fc9-4cc4-4d5b-a137-afbb761e23e5",
    "metadata": {},
    "outputs": [
@@ -351,7 +370,7 @@
        "{'source_id': 'camp_2023', 'success': True, 'error': None, 'status_code': 202}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
