--- a/0_creating-archive-formats.ipynb
+++ b/0_creating-archive-formats.ipynb
@@ -19,22 +19,14 @@
    "execution_count": 1,
    "id": "771937d3-8e99-453c-a0b9-36fede9eb29f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/lward/miniconda3/envs/camp/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from battdat.io.maccor import MACCORReader\n",
     "from battdat.schemas.battery import ElectrodeDescription, ElectrolyteDescription, BatteryDescription\n",
     "from battdat.schemas import BatteryMetadata\n",
     "from battdat.data import BatteryDataset\n",
     "from concurrent.futures import ProcessPoolExecutor, as_completed\n",
+    "from datetime import datetime\n",
     "from shutil import rmtree\n",
     "from tqdm.auto import tqdm\n",
     "from pathlib import Path\n",
@@ -694,14 +686,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_15700/3671467591.py:61: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/\n",
-      "  describe_cell(record).dict(exclude_unset=True)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "{'layer_count': 13,\n",
@@ -796,7 +780,7 @@
    "metadata": {},
    "source": [
     "## Load in an Example Test\n",
-    "Tests are stored in MACCOR format. Let's load one in to see how the data looks"
+    "Tests are stored in MACCOR format. Let's load one in to see how the data looks.\n"
    ]
   },
   {
@@ -806,7 +790,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reader = MACCORReader()"
+    "reader = MACCORReader(ignore_time=True)  # The datetime column is a problem in a few files"
    ]
   },
   {
@@ -853,11 +837,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>ChargingState.hold</td>\n",
+       "      <td>ChargingState.unknown</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.073548</td>\n",
        "      <td>0</td>\n",
-       "      <td>ControlMethod.rest</td>\n",
+       "      <td>ControlMethod.constant_current</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -865,11 +849,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.162</td>\n",
-       "      <td>ChargingState.hold</td>\n",
+       "      <td>ChargingState.unknown</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
-       "      <td>ControlMethod.rest</td>\n",
+       "      <td>ControlMethod.constant_current</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -877,13 +861,13 @@
        "</div>"
       ],
       "text/plain": [
-       "   cycle_number  file_number  test_time               state  current  \\\n",
-       "0             0            0      0.000  ChargingState.hold      0.0   \n",
-       "1             0            0      0.162  ChargingState.hold      0.0   \n",
+       "   cycle_number  file_number  test_time                  state  current  \\\n",
+       "0             0            0      0.000  ChargingState.unknown      0.0   \n",
+       "1             0            0      0.162  ChargingState.unknown      0.0   \n",
        "\n",
-       "    voltage  step_index              method  substep_index  \n",
-       "0  0.073548           0  ControlMethod.rest              0  \n",
-       "1  0.000000           0  ControlMethod.rest              0  "
+       "    voltage  step_index                          method  substep_index  \n",
+       "0  0.073548           0  ControlMethod.constant_current              0  \n",
+       "1  0.000000           0  ControlMethod.constant_current              0  "
       ]
      },
      "execution_count": 20,
@@ -939,62 +923,63 @@
     "    for col in data.raw_data.columns:\n",
     "        if data.raw_data[col].dtype == np.float64:\n",
     "            data.raw_data[col] = data.raw_data[col].astype(np.float32)\n",
+    "    data.validate()\n",
     "    data.to_hdf(path, complevel=9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "befdcbd2-f624-48ad-b33f-c24ee588356a",
+   "metadata": {},
+   "source": [
+    "Parse the test date"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "37a44ad7-e810-40ba-bed1-6aaf3f56872a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_descriptions['start_date'] = test_descriptions['Date of Test'].apply(lambda x: datetime.strptime(x.strip(), '%m/%d/%Y'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f45c5d2e-d925-4dd4-bff5-ff117880cad7",
+   "metadata": {},
+   "source": [
+    "Run for all cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "4fdfdbc8-6be0-49e6-b774-f588c422840b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 67%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▋                                                                      | 405/602 [47:09<31:14,  9.51s/it]"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e7a79ae04d44b8585dcddc99eeea92f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/602 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING: Found 3 descriptions for build=\"B35G\". Picking the first\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 67%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████                                                                      | 406/602 [47:18<30:59,  9.49s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Found 3 descriptions for build=\"B35G\". Picking the first\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 602/602 [1:11:15<00:00,  7.10s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "WARNING: Found 3 descriptions for build=\"B35G\". Picking the first\n",
+      "WARNING: Found 3 descriptions for build=\"B35G\". Picking the first\n",
       "Succeeded in parsing 602 cells\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -1005,6 +990,8 @@
     "known_cells['matched'] = False\n",
     "success_count = 0\n",
     "for (batch_id, cell_id), group in tqdm(test_descriptions.groupby(['Batch', 'Cell Number'])):\n",
+    "    group = group.sort_values('start_date')\n",
+    "    \n",
     "    # Get the metadata for the cell \n",
     "    cell_name = f'batch_{batch_id}_cell_{cell_id}'\n",
     "    cell_metadata = describe_cell(group.iloc[0])\n",
@@ -1067,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "be458191-b47d-44f1-a66f-2ebc762383a0",
    "metadata": {},
    "outputs": [],
@@ -1085,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "4eb0e7ea-e733-45e8-bf99-154affdb61a8",
    "metadata": {},
    "outputs": [
@@ -1112,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "b2ddd741-eea4-4d35-a30c-a7ae2f614dc0",
    "metadata": {},
    "outputs": [],
@@ -1122,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "db14e3fc-a649-45f2-8f33-d6954cbb0e09",
    "metadata": {},
    "outputs": [],
@@ -1132,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "42cc8330-bd3e-47ea-91d3-ebcdf371c02d",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1199,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c09e721-4f08-456e-8be9-25c9e3afedf6",
+   "id": "d3475641-1e61-44a3-b391-873d589ffdcd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04994b30-c735-45a1-ad4b-d1e0d1f644cd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1234,7 +1229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
